--- a/loginpage.html
+++ b/loginpage.html
@@ -72,7 +72,7 @@ form {
                     <label for="location">Location:</label>
                     <input type="text" id="location" name="location">
                 </div>
-                <button type="submit" class="btn"><a href="C:\Users\amrut\OneDrive\Desktop\javascript_projects\final_ibm.html" style="text-decoration: none; color: white;">Log In</a></button>
+                <button type="submit" class="btn"><a href="final_ibm.html" style="text-decoration: none; color: white;">Log In</a></button>
             </form>
         </div>
     </section>
